crates/bindings/c/grafeo.h

/* ---- Status codes -------------------------------------------------------- */

typedef enum {
    GRAFEO_OK                  = 0,
    GRAFEO_ERROR_DATABASE      = 1,
    GRAFEO_ERROR_QUERY         = 2,
    GRAFEO_ERROR_TRANSACTION   = 3,
    GRAFEO_ERROR_STORAGE       = 4,
    GRAFEO_ERROR_IO            = 5,
    GRAFEO_ERROR_SERIALIZATION = 6,
    GRAFEO_ERROR_INTERNAL      = 7,
    GRAFEO_ERROR_NULL_POINTER  = 8,
    GRAFEO_ERROR_INVALID_UTF8  = 9
} GrafeoStatus;
/* ---- Opaque types -------------------------------------------------------- */

typedef struct GrafeoDatabase    GrafeoDatabase;
typedef struct GrafeoResult      GrafeoResult;
typedef struct GrafeoNode        GrafeoNode;
typedef struct GrafeoEdge        GrafeoEdge;
typedef struct GrafeoStream      GrafeoStream;
/* ---- Error handling ------------------------------------------------------ */

const char* grafeo_last_error(void);
/* ---- Lifecycle ----------------------------------------------------------- */

GrafeoDatabase* grafeo_open_memory(void);
GrafeoDatabase* grafeo_open(const char* path);
GrafeoDatabase* grafeo_open_read_only(const char* path);
GrafeoDatabase* grafeo_open_single_file(const char* path);
GrafeoStatus    grafeo_close(GrafeoDatabase* db);
void            grafeo_free_database(GrafeoDatabase* db);
const char*     grafeo_version(void);
/* ---- Query execution ----------------------------------------------------- */

GrafeoResult* grafeo_execute(GrafeoDatabase* db, const char* query);
GrafeoResult* grafeo_execute_with_params(GrafeoDatabase* db, const char* query, const char* params_json);
GrafeoResult* grafeo_execute_cypher(GrafeoDatabase* db, const char* query);
GrafeoResult* grafeo_execute_cypher_with_params(GrafeoDatabase* db, const char* query, const char* params_json);
GrafeoResult* grafeo_execute_gremlin(GrafeoDatabase* db, const char* query);
GrafeoResult* grafeo_execute_gremlin_with_params(GrafeoDatabase* db, const char* query, const char* params_json);
GrafeoResult* grafeo_execute_graphql(GrafeoDatabase* db, const char* query);
GrafeoResult* grafeo_execute_graphql_with_params(GrafeoDatabase* db, const char* query, const char* params_json);
GrafeoResult* grafeo_execute_sparql(GrafeoDatabase* db, const char* query);
GrafeoResult* grafeo_execute_sparql_with_params(GrafeoDatabase* db, const char* query, const char* params_json);
/* Requires sql-pgq feature. */
GrafeoResult* grafeo_execute_sql(GrafeoDatabase* db, const char* query);
GrafeoResult* grafeo_execute_sql_with_params(GrafeoDatabase* db, const char* query, const char* params_json);
/* Unified language dispatcher: language is "gql", "cypher", "gremlin", "graphql", "sparql", or "sql".
 * params_json may be NULL. */
GrafeoResult* grafeo_execute_language(GrafeoDatabase* db, const char* language, const char* query, const char* params_json);
/* ---- Result access ------------------------------------------------------- */

const char* grafeo_result_json(const GrafeoResult* result);
double      grafeo_result_execution_time_ms(const GrafeoResult* result);
uint64_t    grafeo_result_rows_scanned(const GrafeoResult* result);
const char* grafeo_result_nodes_json(const GrafeoResult* result);
const char* grafeo_result_edges_json(const GrafeoResult* result);
void        grafeo_free_result(GrafeoResult* result);
/* ---- Streaming (experimental, 0.5.40+) ---------------------------------- */
/* Lazy cursor-based results: bounded memory regardless of result size.
 * Read-only, pull-only: rejects mutations, ORDER BY, aggregate, DISTINCT,
 * EXPLAIN, PROFILE, and session/schema commands. Use grafeo_execute for
 * those. */

/* Opens a streaming query. Returns NULL on error (check grafeo_last_error). */
GrafeoStream* grafeo_stream_open(GrafeoDatabase* db, const char* query);
/* Returns the column names as a JSON array. Caller frees with grafeo_free_string. */
char* grafeo_stream_columns_json(GrafeoStream* stream);
/* Pulls the next row into *out_json as a JSON object.
 * On success (GrafeoStatus::Ok) with non-NULL *out_json: caller frees the
 * string with grafeo_free_string. On success with NULL *out_json: stream
 * exhausted, stop iterating. On any other status, grafeo_last_error has
 * details. */
GrafeoStatus grafeo_stream_next_row_json(GrafeoStream* stream, char** out_json);
/* Frees a stream handle. Safe to call on NULL. */
void grafeo_stream_free(GrafeoStream* stream);
/* ---- Schema context ------------------------------------------------------ */

GrafeoStatus    grafeo_set_schema(GrafeoDatabase* db, const char* name);
GrafeoStatus    grafeo_reset_schema(GrafeoDatabase* db);
const char*     grafeo_current_schema(const GrafeoDatabase* db);
/* ---- Node CRUD ----------------------------------------------------------- */

uint64_t     grafeo_create_node(GrafeoDatabase* db, const char* labels_json, const char* properties_json);
GrafeoStatus grafeo_get_node(GrafeoDatabase* db, uint64_t id, GrafeoNode** out);
int32_t      grafeo_delete_node(GrafeoDatabase* db, uint64_t id);
GrafeoStatus grafeo_set_node_property(GrafeoDatabase* db, uint64_t id, const char* key, const char* value_json);
int32_t      grafeo_remove_node_property(GrafeoDatabase* db, uint64_t id, const char* key);
int32_t      grafeo_add_node_label(GrafeoDatabase* db, uint64_t id, const char* label);
int32_t      grafeo_remove_node_label(GrafeoDatabase* db, uint64_t id, const char* label);
uint64_t    grafeo_node_id(const GrafeoNode* node);
const char* grafeo_node_labels_json(const GrafeoNode* node);
const char* grafeo_node_properties_json(const GrafeoNode* node);
void        grafeo_free_node(GrafeoNode* node);
/* ---- Edge CRUD ----------------------------------------------------------- */

uint64_t     grafeo_create_edge(GrafeoDatabase* db, uint64_t source_id, uint64_t target_id, const char* edge_type, const char* properties_json);
GrafeoStatus grafeo_get_edge(GrafeoDatabase* db, uint64_t id, GrafeoEdge** out);
int32_t      grafeo_delete_edge(GrafeoDatabase* db, uint64_t id);
/* ---- Memory management --------------------------------------------------- */

void grafeo_free_string(char* s);