crates/bindings/csharp/src/Grafeo/Native/NativeMethods.cs

// P/Invoke declarations for all grafeo-c exported functions.
// Uses .NET 8 LibraryImport source generation for AOT-safe marshalling.

using System.Runtime.InteropServices;

namespace Grafeo.Native;

internal static partial class NativeMethods
{
    private const string LibName = "grafeo_c";

    // =========================================================================
    // Lifecycle
    // =========================================================================

    /// <summary>Create a new in-memory database. Returns null on error.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_open_memory();

    /// <summary>Open or create a persistent database at path. Returns null on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_open(string path);

    /// <summary>Open an existing database in read-only mode. Returns null on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_open_read_only(string path);

    /// <summary>Open or create a single-file database (no WAL sidecar). Returns null on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_open_single_file(string path);

    /// <summary>Close the database, flushing pending writes. Returns status code.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_close(nint db);

    /// <summary>Free a database handle. Must be called after grafeo_close.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_database(nint db);

    /// <summary>Returns the library version string. The pointer is static, do NOT free.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_version();

    // =========================================================================
    // Query Execution
    // =========================================================================

    /// <summary>Execute a GQL query. Returns result pointer, or null on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute(nint db, string query);

    /// <summary>Execute a GQL query with JSON-encoded parameters.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_with_params(nint db, string query, string paramsJson);

    /// <summary>Execute a Cypher query.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_cypher(nint db, string query);

    /// <summary>Execute a Gremlin query.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_gremlin(nint db, string query);

    /// <summary>Execute a GraphQL query.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_graphql(nint db, string query);

    /// <summary>Execute a SPARQL query.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_sparql(nint db, string query);

    /// <summary>Execute a SQL/PGQ query.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_sql(nint db, string query);

    /// <summary>Execute a Cypher query with JSON-encoded parameters.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_cypher_with_params(nint db, string query, string paramsJson);

    /// <summary>Execute a Gremlin query with JSON-encoded parameters.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_gremlin_with_params(nint db, string query, string paramsJson);

    /// <summary>Execute a GraphQL query with JSON-encoded parameters.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_graphql_with_params(nint db, string query, string paramsJson);

    /// <summary>Execute a SPARQL query with JSON-encoded parameters.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_sparql_with_params(nint db, string query, string paramsJson);

    /// <summary>Execute a SQL/PGQ query with JSON-encoded parameters.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_sql_with_params(nint db, string query, string paramsJson);

    /// <summary>Execute a query in any supported language. Language: "gql", "cypher", "sparql", "gremlin", "graphql", "sql".</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_execute_language(nint db, string language, string query, string? paramsJson);

    // =========================================================================
    // Result Access
    // =========================================================================

    /// <summary>Get the JSON string from a result. Valid until grafeo_free_result.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_result_json(nint result);

    /// <summary>Get the execution time in milliseconds.</summary>
    [LibraryImport(LibName)]
    internal static partial double grafeo_result_execution_time_ms(nint result);

    /// <summary>Get the number of rows scanned.</summary>
    [LibraryImport(LibName)]
    internal static partial ulong grafeo_result_rows_scanned(nint result);

    /// <summary>Get pre-extracted nodes as JSON. Valid until grafeo_free_result.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_result_nodes_json(nint result);

    /// <summary>Get pre-extracted edges as JSON. Valid until grafeo_free_result.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_result_edges_json(nint result);

    /// <summary>Free a query result.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_result(nint result);

    // =========================================================================
    // Streaming (experimental, 0.5.40+)
    // =========================================================================

    /// <summary>Open a streaming GQL query. Returns stream handle or null on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial nint grafeo_stream_open(nint db, string query);

    /// <summary>Returns the column names as a JSON array. Caller must free with grafeo_free_string.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_stream_columns_json(nint stream);

    /// <summary>Pulls the next row as a JSON object into out_json.
    /// Returns 0 (Ok) with non-null out_json: caller frees the string.
    /// Returns 0 (Ok) with null out_json: stream exhausted.
    /// Returns non-zero: error (call grafeo_last_error).</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_stream_next_row_json(nint stream, out nint outJson);

    /// <summary>Frees a stream handle.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_stream_free(nint stream);

    // =========================================================================
    // Schema context
    // =========================================================================

    /// <summary>Set the current schema for subsequent execute calls.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_set_schema(nint db, string name);

    /// <summary>Clear the current schema context.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_reset_schema(nint db);

    /// <summary>Returns the current schema name as a UTF-8 string pointer, or null if none is set.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_current_schema(nint db);

    // =========================================================================
    // Node CRUD
    // =========================================================================

    /// <summary>Create a node with labels (JSON array) and properties (JSON object). Returns node ID or u64.MaxValue on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial ulong grafeo_create_node(nint db, string labelsJson, string? propertiesJson);

    /// <summary>Get a node by ID. Writes into out pointer. Returns status.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_get_node(nint db, ulong id, out nint nodeOut);

    /// <summary>Delete a node by ID. Returns 1 if deleted, 0 if not found, -1 on error.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_delete_node(nint db, ulong id);

    /// <summary>Set a property on a node.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_set_node_property(nint db, ulong id, string key, string valueJson);

    /// <summary>Remove a property from a node. Returns 1 if removed, 0 if not found.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_remove_node_property(nint db, ulong id, string key);

    /// <summary>Add a label to a node. Returns 1 if added, 0 if already present.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_add_node_label(nint db, ulong id, string label);

    /// <summary>Remove a label from a node. Returns 1 if removed, 0 if not present.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int grafeo_remove_node_label(nint db, ulong id, string label);

    /// <summary>Free a GrafeoNode.</summary>
    [LibraryImport(LibName)]
    internal static partial void grafeo_free_node(nint node);

    /// <summary>Access node ID.</summary>
    [LibraryImport(LibName)]
    internal static partial ulong grafeo_node_id(nint node);

    /// <summary>Access labels JSON. Valid until grafeo_free_node.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_node_labels_json(nint node);

    /// <summary>Access properties JSON. Valid until grafeo_free_node.</summary>
    [LibraryImport(LibName)]
    internal static partial nint grafeo_node_properties_json(nint node);

    // =========================================================================
    // Edge CRUD
    // =========================================================================

    /// <summary>Create an edge. Returns edge ID or u64.MaxValue on error.</summary>
    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial ulong grafeo_create_edge(nint db, ulong sourceId, ulong targetId, string edgeType, string? propertiesJson);

    /// <summary>Get an edge by ID. Writes into out pointer. Returns status.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_get_edge(nint db, ulong id, out nint edgeOut);

    /// <summary>Delete an edge by ID. Returns 1 if deleted, 0 if not found, -1 on error.</summary>
    [LibraryImport(LibName)]
    internal static partial int grafeo_delete_edge(nint db, ulong id);
